css/style.css
/* Global parameters */

:root {
  --accentColor: #066F14;
  --accentColor-Light: #359b43;
  --accentColor-ExLight: #DFFFE3;
  --primaryColor: #4A4A4A;
  --fontColor-Dark: #1A1A1A;
  --fontColor-Gray: #5A5A5A;
  --fontColor-White: #ECECEC;
}

body {
  font-family: 'DM Sans', sans-serif;
  font-style: normal;
  font-weight: 400;
  line-height: 160%;
  color: var(--primaryColor);
}

.container {
  max-width: 1180px;
  margin: 0 auto;
  padding: 0 15px;
}

.flex {
  display: flex;
}

.section-offset {
  margin-bottom: 128px;
}

/* Fonts config */
.accent-font {
  font-family: 'Nunito Sans', sans-serif;
  font-style: normal;
  color: var(--fontColor-Dark);
}

.fw500 {
  font-weight: 500;
}

.fw600 {
  font-weight: 600;
}

.fw700 {
  font-weight: 700;
}

.fsz14-lh18 {
  font-size: 14px;
  line-height: 18px;
}

.fsz18-lh23 {
  font-size: 18px;
  line-height: 23px;
}

.fsz18-lh29 {
  font-size: 18px;
  line-height: 29px;
}

.fsz24-lh33 {
  font-size: 24px;
  line-height: 33px;
}

.fsz36-lh49{
  font-size: 36px;
  line-height: 49px;
}

.fsz40-lh50 {
  font-size: 40px;
  line-height: 50px;
}

.fsz48-lh57 {
  font-size: 48px;
  line-height: 57px;
}

.fsz72-lh92 {
  font-size: 72px;
  line-height: 92px;
}

.lh19 {
  line-height: 19px;
}

.lh28 {
  line-height: 28px;
}

.lh21 {
  line-height: 21px;
}
/* End Fonts config */

/* Burger selectors */
.burger {
  height: 32px;
  width: 32px;
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  z-index: 10;
}

.burger-line {
  height: 3px;
  width: 100%;
  background-color: var(--fontColor-Dark);
  border-radius: 5px;
}

.burger-center {
  opacity: 1;
  transition: opacity .3s ease-in-out;
}

.burger--active-center {
  opacity: 0;
}

.burger-top,
.burger-bottom {
  transform-origin: left;
  transform: rotate(0deg);
  transition: all .3s ease-in-out;
}

.burger--active-top {
  transform: rotate(35deg);
}

.burger--active-bottom {
  transform: rotate(-35deg);
}

.burger-menu--active {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: #fff;
  z-index: 10;
}

@keyframes slideLink {
  0% {
    transform: translate(150px);
    opacity: 0;
  }

  100% {
    transform: translate(0);
    opacity: 1;
  }
}

.burger-menu__link {
  font-size: 32px;
  font-weight: bold;
  line-height: 100%;
  color: var(--fontColor-Dark);
  animation: slideLink .5s ease;
  animation-fill-mode: both;
}

/* End burger */
.link {
  display: block;
  color: var(--fontColor-Dark);
  position: relative;
}

.link::after {
  content: '';
  height: 1px;
  width: 100%;
  position: absolute;
  bottom: -5px;
  left: 0;
  background-color: var(--accentColor);
  opacity: 0;
  transition: opacity .3s ease-in-out;
}

.link:hover::after {
  opacity: 1;
}

.btn {
  background: var(--accentColor);
  border-radius: 4px;
  color: #fff;
  transition: all .3s ease-in-out;
}

.btn:hover {
  background-color: var(--accentColor-Light);
}



/* HEADER */
.header__inner {
  padding-top: 40px;
  padding-bottom: 40px;
  justify-content: space-between;
  align-items: center;
}

.header__login {
  margin-right: 48px;
}

.nav__item:not(:last-child) {
  margin-right: 48px;
}

.header__btn {
  padding: 12px 16px;
}

.header__right {
  align-items: center;
}

.header__burger {
  margin-left: 30px;
}

/* Main */
/* Hero */
.hero__inner {
  margin-bottom: 100px;
  align-items: center;
  position: relative;
}
.hero__content {
  max-width: 548px;
  flex-direction: column;
}

.hero__inner::after {
  content: '';
  width: 157px;
  height: 193px;
  position: absolute;
  left: 40%;
  bottom: 15%;
  background-image: url('/img/hero-bg.png');
  background-repeat: no-repeat;
  background-size: cover;
  transform: rotate(20deg);
  z-index: -1;
}

.hero__title {
  margin-bottom: 24px;
}

.hero__descr {
  margin-bottom: 40px;
}

.hero__btn {
  padding: 16px 0;
  margin-bottom: 60px;
  max-width: 160px;
  text-align: center;
}

.hero__adventage {
  width: 100%;
  flex-wrap: wrap;
  justify-content: space-between;
}


/* Collection */
.collection__inner {
  justify-content: space-between;

}
.collection__text {
  flex-direction: column;
  justify-content: space-between;
  max-width: 390px;
}

.collection__link {
  max-width: 200px;
  padding-left: 10px;
  padding-top: 2px;
  padding-bottom: 2px;
  color: #4A4A4A;
  position: relative;
}
.collection__link::after {
  position: absolute;
  top: 22%;
  right: 10px;
  content: '';
  width: 15px;
  height: 15px;
  border-bottom: 2px solid #4A4A4A;
  border-right: 2px solid #4A4A4A;
  transform: rotate(-45deg);
}

.collection__link:hover {
  background-color: #cbcbcb;
}

.collection__item {
  padding: 22px 28px;
  width: 215px;
  height: 207px;
  border-radius: 4px;
}

.collection__item:not(:last-child) {
  margin-right: 24px;
}

.collection__item:nth-child(2n-1) {
  background: #F6EDE8;
}

.collection__item:nth-child(2n) {
  background: #F0F1F6;
}

.collection__img {
  width: 163px;
  height: 163px;
}
/* End collection */

/* About US */
.about__inner {
  justify-content: space-between;
}

.about__img {
  margin-right: 15px;
  width: 516px;
}

.about__wrapper {
  width: 100%;
  height: 100%;
  justify-content: flex-end;
  align-items: flex-end;
  position: relative;
}

.about__wrapper>img {
  max-width: 446px;
}

.about__wrapper::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 86%;
  height: 89%;
  background-color: var(--accentColor);
  z-index: -1;
}

.about__content {
  max-width: 44%;
}

.about__title {
  margin-bottom: 12px;
  color: var(--accentColor);
}

.about__subtitle {
  margin-bottom: 24px;
}

.about__text {
  margin-bottom: 16px;
}

.about__descr {
  margin-bottom: 36px;
}

.about__btn {
  display: block;
  max-width: 155px;
  padding: 16px 0;
  text-align: center;
}

/* Product */
.product__inner {
  padding: 0;
  flex-direction: column;
  align-items: center;
}
.product__title {
  margin-bottom: 24px;
  text-align: center;
}

.product__list {
  margin-bottom: 42px;
  justify-content: center;
  align-items: center;
}

.product__item:not(:last-child) {
  margin-right: 24px;
}

.product__link {
  color: inherit;
}

.product__cards {
  margin-bottom: 40px;
  width: 99%;
  justify-content: space-between;
}

.product__card:nth-child(2n-1) {
  background-color: #EAF2E5;
}

.product__card:nth-child(2n) {
  background-color: #F0EBE6;
}

.product__btn {
  padding: 16px 32px;
  max-width: 155px;
}

.card-product {
  width: 250px;
  padding: 10px 30px 30px;
  display: flex;
  flex-direction: column;
}

.card-product__img {
  margin-bottom: 6px;
  width: 140px;
  height: 153px;
  align-self: center;
}

.card-product__name {
  margin-bottom: 10px;
}

.card-product__rating {
  margin-bottom: 12px;
  display: flex;
}

.card-product__star-icon:not(:last-child) {
  margin-right: 4px;
}

/* Review */
.review__left {
  margin-right: 15px;
  max-width: 500px;
}

.review__head {
  margin-bottom: 43px;
}

.review__title {
  margin-bottom: 12px;
}

.review__img {
  max-width: 600px;
  z-index: -1;
}

.slider {
  width: 600px;
  position: relative;
}

.slider__arrows {
  width: 48px;
  height: 24px;
  position: absolute;
  right: 0;
  bottom: 0;
  display: flex;
}

.slider__arrow {
  padding: 0 5px;
  width: 24px;
  height: 24px;
}

.slider__arrow-left {
  background-color: #143B19;
}

.slider__arrow-right {
  background-color: #fff;
}

.slider__icon {
  width: 12px;
}

.card-review {
  padding: 20px 60px 30px 30px;

  background-color: var(--accentColor);
  position: relative;
}

.card-review::after {
  content: '';
  width: 40px;
  height: 40px;
  position: absolute;
  top: 4%;
  right: 2%;
  background-size: contain;
  background-repeat: repeat-x;
  background-image: url('/img/Vector.svg');
}

.card-review__wrapper {
  display: flex;
  align-items: center;
}

.card-review__wrapper>img {
  margin-right: 10px;
}

.card-review__title {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 600;
  font-size: 18px;
  line-height: 25px;
  color: #FFFFFF;
}

.card-review__subtitle {
  font-size: 14px;
  line-height: 18px;
  color: #D9D9D9;
}

.card-review__comment {
  color: #fff;
}

/* Subscribe */
.subscribe__inner {
  margin-bottom: 80px;
  padding: 60px 56px;
  max-width: 1040px;
  background-color: #DFFFE3;
  border-radius: 6px;
  position: relative;
}

.subscribe__content {
  max-width: 480px;
}
.subscribe__title {
  margin-bottom: 12px;
}
.subscribe__subtitle {
  margin-bottom: 30px;
}

.subscribe__input-wrapper {
  display: flex;
}

.subscribe__input {
  margin-right: -120px;
  padding: 8px 8px 8px 20px;
  width: 450px;
  height: 56px;
  background-color: #fff;
  border-radius: 4px;
}

.subscribe__input:focus {
  outline: 2px solid #000;
}

.subscribe__input:hover {
  outline: 2px solid var(--accentColor);
}

.subscribe__input:active {
  outline: 2px solid black;
}

.subscribe__btn {
  padding: 12px 16px;
  height: fit-content;
  align-self: center;
}

.subscribe__img {
  position: absolute;
  bottom: 0;
  right: 0%;
}

/* Instagram folow us */
.instagram__inner {
  flex-direction: column;
  align-items: center;
}

.instagram__head {
  max-width: 544px;
}

.instagram__title {
  text-align: center;
  margin-bottom: 12px;
}
.instagram__subtitle {
  text-align: center;
  margin-bottom: 40px;
}

.instagram__link {
  position: relative;
  transition: all .3s ease;
}

.instagram__link:hover:after {
  content: '';
  width: 66px;
  height: 66px;
  position: absolute;
  top: calc(50% - 33px);
  left: calc(50% - 33px);
  background-image: url('/img/instagram.svg');
}

.instagram__link:hover .instagram__img {
  filter: brightness(0.7);
}


.instagram__img {
  height: 100%;
  transition: all .2s;
}

/* Footer */
.footer__inner {
  margin-bottom: 60px;
  justify-content: space-between;
}

.footer__info {
  max-width: 306px;
}
.footer__logo {
  margin-bottom: 24px;
}

.footer__descr {
  margin-bottom: 22px;
}

.socials {
  display: flex;
}
.social__link {
  display: block;
  padding: 12px;
  width: 48px;
  height: 48px;
  background-color: #EDFFDD;
  border-radius: 4px;
}

.social__link:not(:last-child) {
  margin-right: 16px;
}


.footer__navigation {
  width: 645px;
  justify-content: space-between;
}


.footer__title {
  margin-bottom: 24px;
  color: var(--fontColor-Dark);
}

.footer__item:not(:last-child) {
  margin-bottom: 16px;
}

.footer__link {
  font-size: 16px;
  line-height: 21px;
  color: #5A5A5A;
}

.footer__link:hover {
  color: var(--accentColor-Light);
  text-shadow: 0 0 2px var(--accentColor);
}

